z-index fix

--- a/src/css/_scrolly.scss
+++ b/src/css/_scrolly.scss
@@ -99,6 +99,7 @@
     position: absolute;
     right: -20px;
     width: 33%;
+    z-index: 1;
     // height: 100%;
   }
 }
